# OpenBrainAndroidTranscribe

./: .gitignore  BUILDING.md  README.md  STAGE3.md  TODO.md  build.gradle  gradlew  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/openbrain/ambient/: AmbientService.kt  AmbientState.kt  AppSettings.kt  AudioCaptureManager.kt  AudioPipeline.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
asr/: build.gradle
asr/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
asr/src/main/java/com/openbrain/asr/: WhisperLib.kt
llm/: build.gradle
llm/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
llm/src/main/java/com/openbrain/llm/: LlamaLib.kt  MemoryExtractor.kt  MemoryItem.kt
openbrain-client/: build.gradle
openbrain-client/src/main/java/com/openbrain/client/: MemoryRequest.kt  MemorySyncWorker.kt  OpenBrainApi.kt  OpenBrainClient.kt
ui/: build.gradle
ui/src/main/java/com/openbrain/ui/: AdminActivity.kt  SyncLogAdapter.kt
ui/src/main/res/layout/: activity_admin.xml  item_sync_log.xml
wakeword/: build.gradle
wakeword/src/main/java/com/openbrain/wakeword/: WakeWordEngine.kt
